--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Invitación">
     <meta property="og:description" content="¡Vamos a celebrar!">
     <meta property="og:image" itemprop="image"
-      content="https://invitacion-Damian-Aaron.netlify.app/images/miniatura.png" />
+      content="https://te-invito-a-mi-fiesta.netlify.app/images/miniatura.png" />
 
     <meta property="og:type" content="website">
     <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
